--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <body>
   <div class="container">
     <button id="asia-btn">asia</button>
-    <button id="asia-btn">europe</button>
-    <button id="asia-btn">africa</button>
-    <button id="asia-btn">americas</button>
-    <button id="asia-btn">asia</button>
+    <button id="europe-btn">europe</button>
+    <button id="africa-btn">africa</button>
+    <button id="americas-btn">americas</button>
+   
   
   </div>
  
