--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <div class="container">
-    <div id="chart-container">
+    <div class="chart-container">
       <canvas id="myChart"></canvas>
     </div>
     <div class="stat-and-continent-container">
