--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
   <div class="container">
+    <h1>covid 19</h1>
     <div class="chart-container">
-      <canvas id="myChart"></canvas>
+      <canvas id="continent-chart"></canvas>
     </div>
     <div class="stat-and-continent-container">
       <div class="continents-container">
@@ -20,9 +21,12 @@
         <button class="continent-btn">americas</button>
       </div>
     </div>
-    <div></div>
-   
-  
+    <div class="countries-and-small-chart-container">
+      <div></div>
+      <div class="country-chart">
+        <canvas id="country-chart"></canvas>
+      </div>
+    </div>
   </div>
  
 </body>
